# chemistry_language

./: .gitignore  DEMO.md  README.md  main.py  pyproject.toml
chemistry_lang/: __init__.py  __main__.py  ch_ast.py  ch_base.py  ch_env.py  ch_error.py  ch_eval.py  ch_handler.py  ch_interpreter.py  ch_number.py  ch_objs.py  ch_parser.py  ch_periodic_table.py  ch_scanner.py  ch_token.py  ch_tokenizer.py  ch_ureg.py  ch_work.py  globals.py  main.py  periodic_table.json
chemistry_lang/objs/: __init__.py  ch_chemistry.py  ch_number.py  ch_quantity.py  ch_string.py  ch_ureg.py  ch_variable.py  ch_work.py
docs/: script.md
tests/: 99.ch  adder.ch  ch_number_test.py  ch_quantity_test.py  cond_test.py  count.ch  counter.ch  debug.ch  demo.ch  during_test.ch  expression_test.py  fib.ch  fmt_str.ch  func_test.ch  gpa.ch  hanoi.ch  loop_test.py  recurse_test.py  scanner_test.py  submit_test.ch  tokenizer_test.py  utils.py  weird_counter.ch  work_test.py
