[tool.poetry]
name = "chemistry-lang"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "chemistry_lang"}]

[tool.poetry.dependencies]
python = "^3.9"
regex = "^2022.9.13"
Pint = "^0.19.2"
sympy = "^1.11.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
